
PIG-4370: HBaseStorage should support delete markers (bridiver via daijy)

PIG-4360: HBaseStorage should support setting the timestamp field (bridiver via daijy)

PIG-4337: Split Types and MultiQuery e2e tests into multiple groups (rohini)

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4431: ReadToEndLoader does not close the record reader for the last input split (rdsr via daijy)

PIG-4426: RowNumber(simple) Rank not producing correct results (knoguchi)

PIG-4433: Loading bigdecimal in nested tuple does not work (kpriceyahoo via daijy)

PIG-4410: Fix testRankWithEmptyReduce in tez mode (daijy)

PIG-4392: RANK BY fails when default_parallel is greater than cardinality of field being ranked by (daijy)

PIG-4403: Combining -Dpig.additional.jars.uris with -useHCatalog breaks due to combination
 with colon instead of comma (ovlaere via daijy)

PIG-4402: JavaScript UDF example in the doc is broken (cheolsoo)

PIG-4394: Fix Split_9 and Union_5 e2e failures (rohini)

PIG-4391: Fix TestPigStats test failure (rohini)

PIG-4387: Honor yarn settings in tez-site.xml and optimize dag status fetch (rohini)

PIG-4352: Port local mode tests to Tez - TestUnionOnSchema (daijy)

PIG-4359: Port local mode tests to Tez - part4 (daijy)

PIG-4340: PigStorage fails parsing empty map (daijy)

PIG-4366: Port local mode tests to Tez - part5 (daijy)

PIG-4381: PIG grunt shell DEFINE commands fails when it spans multiple lines (daijy)

PIG-4384: TezLauncher thread should be deamon thread (zjffdu via daijy)

PIG-4376: NullPointerException accessing a field of an invalid bag from a nested foreach
 (kspringborn via daijy)

PIG-4355: Piggybank: XPath cant handle namespace in xpath, nor can it return more than one match
 (cavanaug via daijy)

PIG-4371: Duplicate snappy.version in libraries.properties (daijy)

PIG-4368: Port local mode tests to Tez - TestLoadStoreFuncLifeCycle (daijy)
