@@ -305,6 +305,7 @@ public class CSVExcelStorage extends PigStorage implements StoreFuncInterface, L
 
             // Substitute a null value with an empty string. See PIG-2470.
             if (field == null) {
+                fieldStr = null;
                 mProtoTuple.add("");
                 continue;
             }
