@@ -50,6 +50,8 @@ PIG-4333: Split BigData tests into multiple groups (rohini)
  
 BUG FIXES
 
+PIG-4397: CSVExcelStorage incorrect output if last field value is null (daijy)
+
 PIG-4431: ReadToEndLoader does not close the record reader for the last input split (rdsr via daijy)
 
 PIG-4426: RowNumber(simple) Rank not producing correct results (knoguchi)
